--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+:root {
+  --text-size-large: 64px;
+  --text-size-medium: 48px;
+  --text-size-small: 16px;
+  --text-size-tiny: 8px;
+
+  --top-margin: 20px;
+}
+
 html,
 body {
   padding: 0;
@@ -13,6 +22,7 @@ a {
 
 p {
   margin: 0;
+  display: inline-flex;
 }
 
 button {
