--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,36 +1,44 @@
 :root {
-  --text-size-large: 52px;
-  --text-size-medium: 38px;
-
-  --top-margin: 20px;
+   --text-size-large: 52px;
+   --text-size-medium: 38px;
+    --text-size-small: 24px;
+   --top-margin: 20px;
 }
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+   padding: 0;
+   margin: 0;
+   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+   color: inherit;
+   text-decoration: none;
 }
 
 p {
-  margin: 0;
-  display: inline-flex;
+   margin: 0;
+   display: inline-flex;
 }
 
 button {
-  border: 0;
-  background: none;
-  padding: 0;
-  font-size: inherit;
-  cursor: pointer;
+   border: 0;
+   background: none;
+   padding: 0;
+   font-size: inherit;
+   cursor: pointer;
+}
+
+button:hover {
+  filter: brightness(0.9);
+}
+
+button:active {
+  filter: brightness(0.8);
 }
 
 * {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
