--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -2,7 +2,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 32px;
-  width: 60%;
+
+  width: 90vw;
 }
 
 .unverifiedUsersContainer {
@@ -41,8 +42,8 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #aaa;
-  color: black;
+  background-color: rgb(149, 149, 149);
+  color: white;
 }
 
 .table tr:hover {
@@ -50,16 +51,7 @@
 }
 
 .verifySection {
-  width: 70px !important;
-  text-align: center !important;
-}
-
-.createdSection {
-  width: 120px !important;
-}
-
-.verifyTD {
-  text-align: center;
+  width: 200px !important;
 }
 
 .sectionHeading {
@@ -72,12 +64,19 @@
 .verifyButton {
   text-decoration: underline #ef5701;
   cursor: pointer;
+
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .verifyButton:hover {
   color: #ef5701;
   text-decoration: none;
   cursor: pointer;
+}
+
+.verifiedUsersTR > * {
+  background-color: black!important;
 }
 
 @media (max-width: 1100px) {
