--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -61,7 +61,7 @@
   margin-bottom: 12px;
 }
 
-.verifyButton {
+.verifyButton, .tableName {
   text-decoration: underline #ef5701;
   cursor: pointer;
 
@@ -69,7 +69,7 @@
   margin-right: 8px;
 }
 
-.verifyButton:hover {
+.verifyButton:hover, .tableName:hover {
   color: #ef5701;
   text-decoration: none;
   cursor: pointer;
