--- a/styles/UserPage.module.css
+++ b/styles/UserPage.module.css
@@ -45,14 +45,24 @@
    display: flex;
    margin-top: 8px;
    margin-bottom: 8px;
+   justify-content: flex-end;
 }
 
 .newTransaction {
-   margin-left: auto;
    color: white;
    background-color: grey;
+}
+
+.makeAdmin {
+   color: white;
+   background-color: red;
+}
+
+
+.newTransaction, .makeAdmin {
    padding: 0.5rem 1rem;
    border-radius: 8px;
+   margin-left: 8px;
 }
 
 .table {
