--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,58 @@
 :root {
    --text-size-large: 52px;
    --text-size-medium: 38px;
-    --text-size-small: 24px;
+   --text-size-small: 24px;
    --top-margin: 20px;
+
+   --background: #fff;
+   --accents-1: #fafafa;
+   --accents-2: #eaeaea;
+   --accents-3: #999;
+   --accents-4: #888;
+   --accents-5: #666;
+   --accents-6: #444;
+   --accents-7: #333;
+   --accents-8: #222;
+   --foreground: #000;
+
+   --error-lighter: #f7d4d6;
+   --error-light: #ff1a1a;
+   --error: #e00;
+   --error-dark: #c50000;
+
+   --success-lighter: #e6f6e6;
+   --success-light: #2ecc40;
+   --success: #0d9000;
+   --success-dark: #0b6e00;
+
+   --cyan-lighter: #aaffec;
+   --cyan-light: #79ffe1;
+   --cyan: #50e3c2;
+   --cyan-dark: #29bc9b;
+
+   --violet-lighter: #d8ccf1;
+   --violet-light: #8a63d2;
+   --violet: #7928ca;
+   --violet-dark: #4c2889;
+
+   --orange-lighter: #ffecb3;
+   --orange-light: #ffc851;
+   --orange: #ff9c00;
+   --orange-dark: #ff7d00;
+
+   --highlight-purple: #f81ce5;
+   --highlight-magenta: #eb367f;
+   --highlight-pink: #ff0080;
+   --highlight-yellow: #fff500;
 }
 
 html,
 body {
    padding: 0;
    margin: 0;
-   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+      "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -24,22 +66,24 @@ p {
    display: inline-flex;
 }
 
-button {
+/* button {
    border: 0;
    background: none;
    padding: 0;
    font-size: inherit;
    cursor: pointer;
-}
+} */
 
-button:hover {
+/* button:hover {
   filter: brightness(0.9);
 }
 
 button:active {
   filter: brightness(0.8);
-}
+} */
 
 * {
    box-sizing: border-box;
+   margin-top: 0;
+   margin-bottom: 0;
 }
