added user role to user page

--- a/styles/UserPage.module.css
+++ b/styles/UserPage.module.css
@@ -23,6 +23,11 @@
    font-weight: bold;
 }
 
+.role {
+   font-size: var(--text-size-small);
+   margin-left: 7.5px;
+}
+
 .gradYear,
 .totalDueContainer {
    font-size: var(--text-size-medium);
