--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -82,6 +82,10 @@
   width: 140px;
 }
 
+.tableCell {
+  max-height: 16px!important;
+}
+
 @media (max-width: 1100px) {
   .container {
     width: 90%;
