added type dropdown

--- a/styles/Overlays.module.css
+++ b/styles/Overlays.module.css
@@ -2,7 +2,7 @@
    text-align: left;
 }
 
-.inputSection {
+.inputSection, .inputType {
    display: flex;
    flex-direction: row;
    margin-top: 16px;
