--- a/styles/Overlays.module.css
+++ b/styles/Overlays.module.css
@@ -53,4 +53,12 @@
    .inputGroup {
       margin-left: 0 !important;
    }
+
+   .title {
+      font-size: 24px;
+   }
+
+   .label {
+      margin-top: 1em;
+   }
 }
