--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ tr, td, tbody > *, .cell {
 }
 
 html,
-body {
+body, pre {
    padding: 0;
    margin: 0;
    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
