--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -86,6 +86,22 @@
   max-height: 16px!important;
 }
 
+.sortSection {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2px;
+  margin-bottom: 8px;
+}
+
+.sortSection {
+  font-size: 14px;
+  font-weight: normal!important;
+}
+
+.sortTitle {
+  margin-bottom: 8px;
+}
+
 @media (max-width: 1100px) {
   .container {
     width: 90%;
@@ -99,5 +115,9 @@
 
   .table tr {
     height: 40px;
+  }
+
+  .roleColumn {
+    display: none;
   }
 }
