--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -102,6 +102,20 @@
   margin-bottom: 8px;
 }
 
+.sumFields {
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.tableHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: left;
+}
+
 @media (max-width: 1100px) {
   .container {
     width: 90%;
